--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   <script>
     for(let i=0;i<60;i++){const p=document.createElement('div');p.className='particle';p.style.width=p.style.height=Math.random()*7+3+'px';p.style.left=Math.random()*100+'%';p.style.animationDelay=Math.random()*7+'s';p.style.animationDuration=(Math.random()*6+6)+'s';document.getElementById('particles').appendChild(p);}
-    document.getElementById('a').innerText='loadstring(game:HttpGet("https://raw.githubusercontent.com/AAwful/Vector_Hub/0/v2"))()';
+    document.getElementById('a').innerText='loadstring(game:HttpGet("https://vectorhub.space"))()';
     function b(){const t=document.querySelector('.script-box').innerText;navigator.clipboard.writeText(t).then(()=>{const m=document.getElementById('c');m.style.opacity=1;setTimeout(()=>{m.style.opacity=0;},2000);});}
     function d(){document.getElementById('e').classList.add('active');document.body.style.overflow='hidden';}
     function f(){document.getElementById('e').classList.remove('active');document.body.style.overflow='auto';}
