--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="particles" id="particles"></div>
   <div class="container">
-    <img src="https://cdn.discordapp.com/attachments/1428033452195971194/1439344565990457637/vectorhublogov2.png?ex=691a2d96&is=6918dc16&hm=fbfa4b076c0d9105929a6324924861c537bdba30ca9779d46084713bcdbab0f8&" alt="Vector Hub Logo" class="logo">
+    <img src="https://i.pinimg.com/736x/83/f3/26/83f3269c54bc67c878dd5841f56d26da.jpg" alt="Vector Hub Logo" class="logo">
     <h1>VECTOR HUB</h1>
     <p class="tagline">Premium Roblox Script • Free Key System</p>
     <div class="script-box" id="a"></div>
