--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
       </div>
 
       <button id="openAdBtn" class="popup-button">
-        ดูโฆษณา
+        ไปกดติดตาม
       </button>
     </div>
   </div>
