--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <a href="https://whatexpsare.online/" target="_blank" class="btn btn-status">
                 <i class="fas fa-search"></i> Check Executor
             </a>
-            <a href="https://realvelocity.xyz/" target="_blank" class="btn btn-velocity">
+            <a href="https://gofile.io/d/qpOZtq" target="_blank" class="btn btn-velocity">
                 <i class="fas fa-bolt"></i> Velocity
             </a>
 
