--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     </div>
 
     <div class="container">
-            <img src="https://lh3.googleusercontent.com/pw/AP1GczMsHQhGD7fUxK00bjl0DdhTj13MSkVGNmCnM45faAtxP1jeKr7GrGzSlmdMiuYZQC76xAnNF4ruTSK06jImykZUXTdWIL-WxGvijeAI6wgPojWuYOi4J4uzb5-AQ4KoZo47-HH7vn4HKNumy5zOCOft=w150-h150-s-no-gm?authuser=0" alt="Vector Hub Logo" class="logo">
+            <img src="https://photos.fife.usercontent.google.com/pw/AP1GczN9B7hKcgVtVVCXZ6yBXYyRWb44jWX192UERnp-OFLnd8E4u01Q4VKe=w765-h765-s-no-gm?authuser=0" alt="Vector Hub Logo" class="logo">
         <h1>VECTOR HUB</h1>
         <p class="subtitle">⚡ Free & Premium Roblox Scripts ⚡</p>
 
@@ -507,7 +507,7 @@
                 <i class="fas fa-play-circle"></i> How to Get Key
             </button>
 
-            <a href="https://gofile.io/d/qpOZtq" target="_blank" class="btn btn-velocity">
+            <a href="https://gofile.io/d/N0T8FI" target="_blank" class="btn btn-velocity">
                 <i class="fas fa-bolt"></i> Velocity
             </a>
             <button class="btn btn-key" onclick="toggleModal(true)">
