--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     </div>
 
     <div class="container">
-            <img src="https://photos.fife.usercontent.google.com/pw/AP1GczN9B7hKcgVtVVCXZ6yBXYyRWb44jWX192UERnp-OFLnd8E4u01Q4VKe=w765-h765-s-no-gm?authuser=0" alt="Vector Hub Logo" class="logo">
+            <img src="https://i.pinimg.com/736x/2b/74/ed/2b74ed6996523abd70ed251d92bb031f.jpg" alt="Vector Hub Logo" class="logo">
         <h1>VECTOR HUB</h1>
         <p class="subtitle">⚡ Free & Premium Roblox Scripts ⚡</p>
 
