--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 <i class="fas fa-play-circle"></i> How to Get Key
             </button>
 
-            <a href="https://gofile.io/d/qpOZtq" target="_blank" class="btn btn-velocity">
+            <a href="https://gofile.io/d/biQGwp" target="_blank" class="btn btn-velocity">
                 <i class="fas fa-bolt"></i> Velocity
             </a>
             <button class="btn btn-key" onclick="toggleModal(true)">
